--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,8 @@ dependencies {
     // 리사이클러뷰
     implementation 'androidx.recyclerview:recyclerview:1.2.0'
     implementation "androidx.recyclerview:recyclerview-selection:1.1.0"
+    // 네이버 지도 SDK
+    implementation("com.naver.maps:map-sdk:3.11.0")
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
