--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.todowhere">
 
     <application
@@ -10,10 +11,15 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.TodoWhere">
+        android:theme="@style/Theme.TodoWhere"
+
+        tools:replace="android:appComponentFactory"
+        android:appComponentFactory="android.support.v4.app.CoreComponentFactory">
+
         <meta-data
             android:name="com.naver.maps.map.CLIENT_ID"
             android:value="qc5x10r84y"/>
+
         <activity android:name=".AddTodoActivity"></activity>
         <activity android:name=".MainActivity">
             <intent-filter>
