--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,8 @@
             android:name="com.naver.maps.map.CLIENT_ID"
             android:value="qc5x10r84y"/>
 
-        <activity android:name=".AddTodoActivity"></activity>
+        <activity android:name=".AddTodoActivity"
+            android:parentActivityName=".MainActivity"></activity>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
