--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+
     // Realm 플러그인, 순서 주의
     id 'kotlin-kapt'
     id 'realm-android'
@@ -20,10 +21,13 @@ android {
 
     defaultConfig {
         applicationId "com.example.todowhere"
-        minSdkVersion 19
+        minSdkVersion 21
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
+
+        // 멀티덱스용 설정
+        multiDexEnabled = true
 
         // 벡터 드로어블 설정
         vectorDrawables.useSupportLibrary = true
@@ -55,6 +59,8 @@ dependencies {
     implementation "androidx.recyclerview:recyclerview-selection:1.1.0"
     // 네이버 지도 SDK
     implementation("com.naver.maps:map-sdk:3.11.0")
+    // 멀티덱스용 설정
+    implementation ("androidx.multidex:multidex:2.0.1")
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
