--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,8 @@ dependencies {
     implementation("com.naver.maps:map-sdk:3.12.0")
     // 멀티덱스용 설정
     implementation ("androidx.multidex:multidex:2.0.1")
+    // 위치 추적 기능을 위한 의존성 추가
+    implementation "com.google.android.gms:play-services-location:16.0.0"
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
