--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,6 +63,9 @@ dependencies {
     implementation ("androidx.multidex:multidex:2.0.1")
     // 위치 추적 기능을 위한 의존성 추가
     implementation "com.google.android.gms:play-services-location:16.0.0"
+    // WorkManager를 위한 의존성 추가
+    implementation("androidx.work:work-runtime-ktx:$work_version")
+
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
