--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,38 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.todowhere">
+    package="com.example.todowhere" >
 
-    <!-- 현재 위치를 불러오기 위한 권한 요청  -->
-    <!-- 도시 블럭 내의 위치 정확성 제공   -->
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <!-- 위보다 좀 더 정확한 위치 제공  -->
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <!-- 인터넷 사용 허가    -->
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <!-- 현재 위치를 불러오기 위한 권한 요청 -->
+    <!-- 도시 블럭 내의 위치 정확성 제공 -->
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" /> <!-- 위보다 좀 더 정확한 위치 제공 -->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" /> <!-- 인터넷 사용 허가 -->
+    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION"/> <!-- 백그라운드에서 위치 접근에 대한 허용 -->
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:name=".MyApplication"
         android:allowBackup="true"
+        android:appComponentFactory="android.support.v4.app.CoreComponentFactory"
         android:fullBackupContent="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TodoWhere"
-
-        tools:replace="android:appComponentFactory"
-        android:appComponentFactory="android.support.v4.app.CoreComponentFactory">
+        tools:replace="android:appComponentFactory" >
 
         <meta-data
             android:name="com.naver.maps.map.CLIENT_ID"
-            android:value="qc5x10r84y"/>
+            android:value="qc5x10r84y" />
 
-        <activity android:name=".AddTodoActivity"
-            android:parentActivityName=".MainActivity">
-
+        <activity
+            android:name=".AddTodoActivity"
+            android:parentActivityName=".MainActivity" >
         </activity>
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
