--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@
 buildscript {
     ext.kotlin_version = "1.5.10"
     ext.anko_version = "0.10.5"
+    ext.work_version = "2.5.0"
 
     repositories {
         google()
