--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <!-- 브로드캐스터리시버를 사용하여 지오펜싱 전환을 수신 대기하기 위해 서비스 요소 추가    -->
+        <receiver android:name=".GeofenceBroadcastReceiver"/>
     </application>
 
 </manifest>
