--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,6 +65,9 @@ dependencies {
     implementation "com.google.android.gms:play-services-location:18.0.0"
     // WorkManager를 위한 의존성 추가
     implementation("androidx.work:work-runtime-ktx:$work_version")
+    // retrofit2 사용을 위한 의존성 추가
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
