--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION"/> <!-- 백그라운드에서 위치 접근에 대한 허용 -->
 
     <uses-permission android:name="android.permission.INTERNET" />  <!-- 인터넷 사용 허가 -->
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
     <application
         android:name=".MyApplication"
@@ -20,7 +21,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TodoWhere"
-        tools:replace="android:appComponentFactory" >
+        tools:replace="android:appComponentFactory"
+        android:usesCleartextTraffic="true"
+        android:hardwareAccelerated="true">
 
         <meta-data
             android:name="com.naver.maps.map.CLIENT_ID"
