--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,7 +69,7 @@ dependencies {
     implementation("androidx.work:work-runtime-ktx:$work_version")
     // retrofit2 사용을 위한 의존성 추가
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'    // gson형식으로 변환해주는 라이브러리
 
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
