--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,10 @@ plugins {
     id 'realm-android'
 }
 
+// Properies를 선언
+Properties properties = new Properties()
+properties.load(project.rootProject.file('local.properties').newDataInputStream())
+
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.3"
@@ -33,13 +37,22 @@ android {
         vectorDrawables.useSupportLibrary = true
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        // Type - Key - Value 순서로 저장
+        buildConfigField ("String" , "REVESEGEOCODING_API_KEY_ID" , properties['X-NCP-APIGW-API-KEY-ID'])
+        buildConfigField ("String" , "REVESEGEOCODING_API_KEY" , properties['X-NCP-APIGW-API-KEY'])
+
+
     }
 
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+
         }
+
+
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
