--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,29 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.todowhere" >
-
+    package="com.example.todowhere">
     <!-- 현재 위치를 불러오기 위한 권한 요청 -->
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" /> <!-- 도시 블럭 내의 위치 정확성 제공 -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" /> <!-- 위보다 좀 더 정확한 위치 제공 -->
-    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION"/> <!-- 백그라운드에서 위치 접근에 대한 허용 -->
-
-    <uses-permission android:name="android.permission.INTERNET" />  <!-- 인터넷 사용 허가 -->
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" /> <!-- 백그라운드에서 위치 접근에 대한 허용 -->
+    <uses-permission android:name="android.permission.INTERNET" /> <!-- 인터넷 사용 허가 -->
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:name=".MyApplication"
         android:allowBackup="true"
         android:appComponentFactory="android.support.v4.app.CoreComponentFactory"
         android:fullBackupContent="true"
+        android:hardwareAccelerated="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TodoWhere"
-        tools:replace="android:appComponentFactory"
         android:usesCleartextTraffic="true"
-        android:hardwareAccelerated="true">
+        tools:replace="android:appComponentFactory">
+        <activity
+            android:name=".Activity.MapPopUpActivity"
+            android:exported="false"
+            android:theme="@style/Theme.AppCompat.Dialog" />
 
         <meta-data
             android:name="com.naver.maps.map.CLIENT_ID"
@@ -31,19 +33,20 @@
 
         <activity
             android:name=".Activity.AddTodoActivity"
-            android:parentActivityName=".Activity.MainActivity" >
-        </activity>
-        <activity android:name=".Activity.MainActivity" >
+            android:parentActivityName=".Activity.MainActivity"></activity>
+
+        <activity android:name=".Activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-
-        <!-- 브로드캐스터리시버를 사용하여 지오펜싱 전환을 수신 대기하기 위해 서비스 요소 추가    -->
-        <receiver android:name=".GeofenceBroadcastReceiver"  android:exported="true">
+        </activity> <!-- 브로드캐스터리시버를 사용하여 지오펜싱 전환을 수신 대기하기 위해 서비스 요소 추가 -->
+        <receiver
+            android:name=".GeofenceBroadcastReceiver"
+            android:exported="true">
             <intent-filter>
-                <action android:name="android.intent.action.BOOT_COMPLETED"/>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
                 <action android:name="android.intent.action.INPUT_METHOD_CHANGED" />
             </intent-filter>
         </receiver>
