--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,6 +84,9 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'    // gson형식으로 변환해주는 라이브러리
 
+    // 진행중을 표시하기 위한 웨이브뷰
+    implementation 'com.scwang.wave:MultiWaveHeader:1.0.0'
+
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
