--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,25 +68,35 @@ dependencies {
 
     // anko 라이브러리
     implementation "org.jetbrains.anko:anko:$anko_version"
+
     // 머터리얼 캘린더 뷰
     implementation 'com.prolificinteractive:material-calendarview:1.4.3'
+
     // 리사이클러뷰
     implementation 'androidx.recyclerview:recyclerview:1.2.0'
     implementation "androidx.recyclerview:recyclerview-selection:1.1.0"
+
     // 네이버 지도 SDK
     implementation("com.naver.maps:map-sdk:3.12.0")
+
     // 멀티덱스용 설정
     implementation ("androidx.multidex:multidex:2.0.1")
+
     // 위치 추적 기능을 위한 의존성 추가
     implementation "com.google.android.gms:play-services-location:18.0.0"
+
     // WorkManager를 위한 의존성 추가
     implementation("androidx.work:work-runtime-ktx:$work_version")
+
     // retrofit2 사용을 위한 의존성 추가
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'    // gson형식으로 변환해주는 라이브러리
 
     // 진행중을 표시하기 위한 웨이브뷰
     implementation 'com.scwang.wave:MultiWaveHeader:1.0.0'
+
+    // 코루틴 사용을 위한 의존성 추가
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.1'
 
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
