--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,9 +15,9 @@
         android:appComponentFactory="android.support.v4.app.CoreComponentFactory"
         android:fullBackupContent="true"
         android:hardwareAccelerated="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_mine"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/ic_mine_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TodoWhere"
         android:usesCleartextTraffic="true"
